--- a/package.json
+++ b/package.json
@@ -8,12 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "expo": "~40.0.0",
+    "expo-file-system": "~9.3.0",
+    "expo-font": "^8.4.0",
+    "expo-print": "~9.2.0",
+    "expo-sharing": "~8.5.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.1.2",
+    "native-base": "^2.13.15",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-date-picker": "^3.2.5",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-html-to-pdf": "^0.8.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-pdf": "^6.2.2",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-text-gradient": "^0.1.7",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
